source/styles/application.css.scss
@import 'blueprint/reset';

$blueprint-grid-columns: 24;
$blueprint-container-size: 950px;
$blueprint-grid-margin: 10px;

$blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin;

@import 'blueprint';
@import 'blueprint/scaffolding';
@import 'compass/typography/lists/horizontal-list';
@import 'compass/typography/lists/inline-list';
@import 'compass/css3/border-radius';

@include blueprint;

#container {
  @include container;
}

$blue: rgb(29, 55, 121);
$grey: rgb(161, 161, 161);
$light_grey: rgb(226, 228, 227);

body {
  background-color: $light_grey;
  font-family: Arial;
}

#header {
  @include column(24, true);
  height: 50px;

  #logo {
    @include column(5, true);
    @include prepend(19);
    padding-top: 10px;
    margin-left: 12px;
    overflow: visible;
  }
}

#navigation {
  @include column(5);

  ul {
    position: relative;
    list-style-type: none;
    padding-top: 10px;
    padding-left: 0px;

    li {
      a {
        font-size: 16px;
        color: $grey;
        text-transform: uppercase;
        text-decoration: none;
        &:hover {
          color: $blue;
        }
      }

      ul {
        position: absolute;
        top: 193px;
        left: 0px;
        width: 180px;

        overflow: visible;
        border-top: 2px dotted $grey;

        li {
          a {
            font-size: 14px;
            text-transform: none;
            color: $grey;
            &:hover {
              color: $blue;
            }
          }

          ul {
            position: absolute;
            top: 150px;
            left: 0px;
            width: 170px;

            overflow: visible;
            border-top: 2px dotted $grey;

            li {
              list-style-image: none;

              a {
                font-size: 14px;
                color: $grey;

                &:hover {
                  color: $blue;
                }
              }

              &.current {
                list-style-image: url(/images/menu_active.gif);
              }
            }
          }

          &.current {
            list-style-image: url(/images/menu_active.gif);
          }
        }
      }
    }
  }

  #homedots {
    position: absolute;
    border-top: 2px dotted $grey;
    top: 242px;
    width: 180px;
  }

  li.current > a, li.parent_of_current > a {
    color: $blue;
  }

  li.current > a {
    font-weight: bold;
  }

}

#menubar {
  @include column(5);

  #partner-spotlight {
    @include column(5, 'last');

    font-size: 14px;
    color: $blue;
    font-weight: bold;
    margin-top: 217px;
  }
}

#content {
  @include column(14);
  @include border-radius(3px);

  background-color: #ffffff;
  min-height: 550px;

  .inner {

    padding: 15px;
    position: relative;
    img:first-child {
      @include border-radius(3px);
    }

    a[name] {
      color: $blue;
      text-decoration: none;

      &:hover {
        color: $blue;
        text-decoration: none;
      }
    }

    p {
      margin: 0px 0px 15px;
    }

    ul {
      padding-left: 0px;
      margin: 0px 0px 15px 0px;
      list-style-type: none;

      li {
        background-image: url(/images/list_point.gif);
        background-repeat: no-repeat;
        background-position: 0px 2px;
        padding-left: 16px;
        padding-bottom: 5px;
      }
    }

    h1, h2, h3, h5, h6 {
      font-size: 14px;
      color: $blue;
      margin-bottom: 5px;
    }

    h4 {
      font-size: 18px;
      font-family: Georgia;
      margin: 15px 0px;
      color: $blue;
    }

    h3 {
      font-size: 18px;
    }

    a {
      color: $blue;
      text-decoration: none;
      &:hover {
        color: $blue;
        text-decoration: underline;
      }
    }

    br.clear {
      clear: both;
    }

    > div.image {
      text-align: center;
      padding: 15px 0px;
    }

    font-size: 14px;

    table {
      tr {
        td {
          padding: 0px;
        }
      }
    }

    .news {
      margin-top: 15px;
      border-bottom: 2px dotted $grey;

      span {
        color: $grey;
        text-transform: uppercase;
      }

      &:last-child {
        border-bottom: none;
      }
    }

    .partner, .holder {
      .holder_header, .partner_header {
        @include border-radius(3px);

        display: inline-block;
        clear: both;
        width: 100%;
        background-color: $blue;

        img {
          float: left;
        }

        .quotation {
          float: left;
          padding: 10px;
          width: 280px;
          position: relative;

          h4 {
            color: white;
            margin: 0px;
            position: absolute;
            left: 30px;
            bottom: -113px;
          }
        }
      }

      .holder_header img {
        @include border-radius(3px);
      }

      .partner_header img {
        @include border-radius(0px);
      }

      .partner_header {
        margin-bottom: 15px;
      }

      h3 {
        margin-top: 15px;
      }
    }
  }

  &.referenzen {
    h3 {
      margin-bottom: 20px;
    }

    #references tr {
      td {
        padding-top: 20px;
        padding-bottom: 20px;
        border-bottom: 2px dotted $grey;
      }

      &:last-child {
        td {
          border-bottom: none;
          margin-bottom: 0px;
        }
      }
    }
  }

  .partner {
    border-bottom: 2px dotted $grey;
    margin-bottom: 20px;

    &:last-child {
      border-bottom: none;
      margin-bottom: 0px;
    }
  }

  .vision {
    text-align: center;
    margin-top: 30px;
    margin-left: 112px;
    font-size: 22px;
    font-family: Georgia;
    color: $blue;
    width: 300px;
  }

  #wofuerwirstehen {
    margin-bottom: 15px;

    #wofuerwirstehen_image {
      float: left;
      padding-right: 10px;
    }

    #wofuerwirstehen_text {
      float: left;
      padding: 0px;
      font-size: 16px;
      margin-top: 75px;
    }
  }

  .home-quote {

    q {
      font-family: Georgia;
      font-size: 24px;
      color: $blue;
    }

    cite {
      font-style: normal;
      display: block;
    }
  }
}

#sidebar {
  @include column(5, true);

  #spotlight {
    margin-top: 80px;
    height: 60px;

    .inner {
      padding: 15px;

      a {
        text-decoration: none;
        color: $blue;
        font-weight: bold;

        &:hover {
          text-decoration: underline;
        }
      }
    }
  }

  #news, #downloads {
    margin-top: 37px;
    @include border-radius(3px);

    .inner {
      padding: 15px;

      h3 {
        padding-top: 10px;
        width: 160px;
        border-top: 2px dotted $grey;
      }

      ul {
        list-style-type: none;
        padding: 0px;
        margin: 0px;

        li {
          color: $blue;
          font-weight: bold;
          margin-bottom: 15px;

          span {
            display: block;
            color: $grey;
          }

          a {
            text-decoration: none;
            color: $blue;

            &:hover {
              text-decoration: underline;
            }
          }
        }

        li.pdf {
          background-image: url(/images/pdf-icon.png);
          background-repeat: no-repeat;
          background-position: 0px 0px;
          padding-left: 20px;
        }
      }
    }
  }
}

#footer {
  @include column(24, true);
  @include prepend-top;
  @include append-bottom;

  color: $grey;
  font-size: 11px;

  #center {
    @include column(14);
    @include prepend(5);
  }

  #service {
    @include column(5, true);
    @include horizontal-list;

    overflow: visible;

    #presentation {
      @include column(5, true);
      @include horizontal-list;

      margin-top: -40px;

      ul {
        li.pdf {
          background-image: url(/images/pdf-icon.png);
          background-repeat: no-repeat;
          background-position: 0px 0px;
          padding-left: 16px;

          a {
            font-weight: bold;
            color: $blue;

            &:hover {
              text-decoration: underline;
            }
          }
        }
      }
    }

    a.current {
      color: $blue;
      font-weight: bold;
    }

    ul {
      list-style-type: none;
      padding-left: 15px;
      float: left;
      width: 200px;

      li.small {
        padding: 0;
      }

      li.current a {
        color: $blue;
      }
    }
  }

  a {
    color: $grey;
    text-decoration: none;

    &:hover {
      color: $blue;
    }
  }

}

.mTip {
  background-color: #fff;
  color: #000;
  padding: 3px;
}

